--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts:
   uuid: ^3.0.7
+  cloud_firestore: ^4.1.0
+  firebase_auth: ^4.1.4
 
 
 dev_dependencies:
